--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
+    "react-markdown": "^9.0.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.3",
